# tektonit

./: .dockerignore  .gitignore  BUILD_SYSTEM.md  CLAUDE.md  Dockerfile  ENHANCEMENTS.md  README.md  pyproject.toml
.claude/: IMPROVEMENTS.md  README.md
.claude/agents/: failure-analyst.md  pipeline-test-generator.md  pipelinerun-test-generator.md  stepaction-test-generator.md  task-test-generator.md  tekton-linter.md  test-generator.md
.claude/skills/: analyze-tekton.md  diagnose-failure.md  evaluate-coverage.md  fix-test.md  generate-tekton-tests.md  learn-from-pr.md  lint-tekton.md  review-tekton-tests.md  risk-audit.md
.github/workflows/: ci.yml  validate-prompts.yml
deploy/: deployment.yaml  namespace.yaml  secret.yaml
docs/: agent-capabilities.md  architecture-flow.md  architecture.md  autonomous-monitor.md  deployment.md  progressive-disclosure-spec.md  skills-reference.md  test-generation.md  usage.md
scripts/: build_prompts_from_agents.py  sync-prompts.sh
tektonit/: cli.py  generators.py  github_client.py  llm.py  monitor.py  observability.py  parser.py  prompts.py  resilience.py  script_analyzer.py  state.py  test_generator.py
tests/: test_cli.py  test_cli_commands.py  test_cli_functions.py  test_coverage_boost.py  test_generators.py  test_github_client.py  test_imports.py  test_llm.py  test_observability.py  test_parser.py  test_parser_additional.py  test_prompts.py  test_resilience.py  test_script_analyzer.py  test_script_analyzer_additional.py  test_state.py  test_state_additional.py  test_test_generator_basic.py
(+2 files in other folders)
